Fixes dark mode color issues

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -117,7 +117,7 @@
     @apply inline-block bg-pink-700 border-2 border-pink-900 transition-all duration-150 ease-linear text-white text-center no-underline font-semibold;
     @apply hover:text-gray-100 hover:bg-pink-900 hover:translate-x-[2px] hover:translate-y-[2px];
     @apply visited:text-gray-100 visited:hover:text-gray-100;
-    @apply dark:bg-pink-600 dark:border-pink-700 dark:hover:bg-pink-700;
+    @apply dark:bg-pink-600 dark:border-pink-700 dark:hover:bg-pink-700 dark:text-white dark:hover:text-gray-100 dark:visited:text-white;
   }
 
   .button-xs {
